--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Brandon Lysholm's Portfolio</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/slate/bootstrap.min.css">
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
 </head>
 <body>
-<div class="row">
-    <h1>Brandon Lysholm's Portfolio</h1>
+<div class="container">
+    <h1 class="mt-2">Brandon Lysholm's Portfolio</h1>
     <h3>CST Graduate looking for work in the IT sector</h3>
     <p>
         I am a recent CST grad, looking for employment within the IT sector broadly. I have a diverse set of skills from system administration knowledge to
@@ -19,6 +19,7 @@
     <div>
         <ul>
             <h4>Skills:</h4>
+            <li>Full stack development</li>
             <li>
                 Programming languages:
                 <ul>
